add link rel stylesheet, add script src staci/main.js

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,12 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <style>
-    
-    </style>
-    <script>
-        
-    </script>
+    <link rel="stylesheet" type="text/css" media="screen" href="static/main.css">
+    <script src="static/main.js"></script>
 </head>
 <body  onscroll="stickTo('new-message-box')">
 <header>
